# peak-finder

./: .gitignore  README.md  environment.yml  peak-finder.ipynb  pieken-tellen.ipynb  pyproject.toml
src/peak_finder_notebook/: __init__.py  example-datafile.csv  peak-finder.ipynb
