[project]
name = "peak-finder-notebook"
version = "1.1.0.dev1"
description = "Notebook to find peaks in your data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipympl>=0.10.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
]

[project.scripts]
peak-finder-notebook = "peak_finder_notebook:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
